[gd_scene load_steps=12 format=3 uid="uid://c8j6q5y3n4m2p"]

[ext_resource type="PackedScene" uid="uid://dpecff6trr5tu" path="res://scenes/player/mech.tscn" id="1_jyc24"]
[ext_resource type="Script" uid="uid://b75p2aaccklf3" path="res://scripts/managers/spawn_manager.gd" id="2_3gb5g"]
[ext_resource type="PackedScene" uid="uid://b55wg6ln24rqp" path="res://scenes/enemies/enemy.tscn" id="2_kxg8d"]
[ext_resource type="Script" uid="uid://bo6e267pcq10l" path="res://scripts/systems/game_manager.gd" id="3_abc12"]
[ext_resource type="Script" uid="uid://ct7yqcyr635bg" path="res://scripts/ui/game_ui.gd" id="4_def34"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3gb5g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_WallTopBottom"]
size = Vector2(2400, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_WallLeftRight"]
size = Vector2(20, 1600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_Obstacle1"]
size = Vector2(200, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_Obstacle2"]
size = Vector2(50, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_Obstacle3"]
size = Vector2(100, 100)

[node name="ComprehensiveTestLevel" type="Node2D"]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_3gb5g")

[node name="Polygon2D" type="Polygon2D" parent="NavigationRegion2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_abc12")

[node name="SpawnManager" type="Node" parent="GameManager"]
script = ExtResource("2_3gb5g")

[node name="YSortLayer" type="Node2D" parent="."]

[node name="Mech" parent="YSortLayer" instance=ExtResource("1_jyc24")]
position = Vector2(577, 322)

[node name="Enemy" parent="YSortLayer" instance=ExtResource("2_kxg8d")]
position = Vector2(120, 540)
knockback_resistance = 0.0

[node name="Enemy2" parent="YSortLayer" instance=ExtResource("2_kxg8d")]
position = Vector2(104, 80)

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2(1200, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource("RectangleShape2D_WallTopBottom")

[node name="ColorRect" type="ColorRect" parent="Walls/TopWall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1200.0
offset_top = -10.0
offset_right = 1200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(10, 800)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("RectangleShape2D_WallLeftRight")

[node name="ColorRect" type="ColorRect" parent="Walls/LeftWall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -800.0
offset_right = 10.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2(1200, 1590)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
shape = SubResource("RectangleShape2D_WallTopBottom")

[node name="ColorRect" type="ColorRect" parent="Walls/BottomWall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1200.0
offset_top = -10.0
offset_right = 1200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(2390, 800)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("RectangleShape2D_WallLeftRight")

[node name="ColorRect" type="ColorRect" parent="Walls/RightWall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -800.0
offset_right = 10.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="Obstacles" type="Node2D" parent="."]

[node name="Obstacle1" type="StaticBody2D" parent="Obstacles"]
position = Vector2(300, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle1"]
shape = SubResource("RectangleShape2D_Obstacle1")

[node name="ColorRect" type="ColorRect" parent="Obstacles/Obstacle1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.4, 0.2, 1)

[node name="Obstacle2" type="StaticBody2D" parent="Obstacles"]
position = Vector2(900, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle2"]
shape = SubResource("RectangleShape2D_Obstacle2")

[node name="ColorRect" type="ColorRect" parent="Obstacles/Obstacle2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -100.0
offset_right = 25.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="Obstacle3" type="StaticBody2D" parent="Obstacles"]
position = Vector2(600, 1200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle3"]
shape = SubResource("RectangleShape2D_Obstacle1")

[node name="ColorRect" type="ColorRect" parent="Obstacles/Obstacle3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.4, 0.2, 1)

[node name="Obstacle4" type="StaticBody2D" parent="Obstacles"]
position = Vector2(1800, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle4"]
shape = SubResource("RectangleShape2D_Obstacle2")

[node name="ColorRect" type="ColorRect" parent="Obstacles/Obstacle4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -100.0
offset_right = 25.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="Obstacle5" type="StaticBody2D" parent="Obstacles"]
position = Vector2(2000, 1300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle5"]
shape = SubResource("RectangleShape2D_Obstacle3")

[node name="ColorRect" type="ColorRect" parent="Obstacles/Obstacle5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.6, 0.3, 1)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_def34")

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 46.0
text = "Health: 100"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 50.0
offset_right = 220.0
offset_bottom = 76.0
text = "Score: 0"
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 106.0
text = "Wave: 0"
horizontal_alignment = 1

[node name="EnemiesLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 110.0
offset_right = 220.0
offset_bottom = 136.0
text = "Enemies: 0"
horizontal_alignment = 1
